--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,16 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
+  get: ^4.6.6
   image_picker: ^0.8.7+5
-  tflite_flutter: #^0.10.1
-    git:
-      url: https://github.com/tensorflow/flutter-tflite.git
-      ref: main
+  tflite_flutter: ^0.10.4
+  vector_math: ^2.1.4
+#    git:
+#      url: https://github.com/tensorflow/flutter-tflite.git
+#      ref: main
   # tflite_flutter_helper: # Use this instead: https://github.com/tensorflow/flutter-tflite/tree/main/example/image_classification_mobilenet
   #   git:
   #     url: https://github.com/pnyompen/tflite_flutter_helper.git
@@ -41,6 +42,9 @@ dependencies:
   computer:
     git: "https://github.com/ente-io/computer.git"
   image: ^4.1.7
+  camera: ^0.11.0
+  google_mlkit_face_detection: ^0.11.0
+  face_camera: ^0.1.2
 
 dev_dependencies:
   flutter_test:
