--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,6 @@ dependencies:
   get: ^4.6.6
   image_picker: ^0.8.7+5
   tflite_flutter: ^0.10.4
-  vector_math: ^2.1.4
 #    git:
 #      url: https://github.com/tensorflow/flutter-tflite.git
 #      ref: main
@@ -33,17 +32,13 @@ dependencies:
   flutter_isolate: ^2.0.4
   crypto: ^3.0.3
   path_provider: ^2.1.1
-  # vector_math: ^2.1.4
-  # matrix2d: ^1.0.4
-  onnxruntime:
-    git:
-      url: "https://github.com/ente-io/onnxruntime.git"
-      ref: isolates
-  computer:
-    git: "https://github.com/ente-io/computer.git"
+  onnxruntime: ^1.4.1
+#    git:
+#      url: "https://github.com/ente-io/onnxruntime.git"
+#      ref: isolates
+  computer: ^3.2.1
+#    git: "https://github.com/ente-io/computer.git"
   image: ^4.1.7
-  camera: ^0.11.0
-  google_mlkit_face_detection: ^0.11.0
   face_camera: ^0.1.2
 
 dev_dependencies:
